test/files/neg/macro-reify-splice-splice/Test_2.scala
object Test extends App {
  println(Macros.foo)
}